asteria/core/tests/errors/elaboration_errors/type_parameter_not_uniform_in_constructors_confusing_names.asteriacore
data Foo [i : Type] (a : Type) where
   | MkFoo1 {i : Type} : Test$Foo(i, a)
   | MkFoo2 {a : Type} : Test$Foo(a, a)
   ;;
